--- a/calculator.html
+++ b/calculator.html
@@ -413,7 +413,7 @@ function windowOnClick(event) {
 </div>
 
 
-      <!-- <a id = "link" href = "tester.html" style="font-size:2vw;" class="fixed-bottom text-right"> Back to Main Page </a> -->
+      <!-- <a id = "link" href = "index.html" style="font-size:2vw;" class="fixed-bottom text-right"> Back to Main Page </a> -->
     </form>
   </div>
   </body>
