--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <!-- Make the follow elements into a nav component: -->
       <ul class = "navbar-nav">
         <li class = "nav-item">
-          <a class = "nav-link" href="tester.html">Home</a>
+          <a class = "nav-link" href="index.html">Home</a>
         </li>
         <li class = "nav-item">
           <a class = "nav-link" href="calculator.html">Calculator</a>
