--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
     <script src="LightbulbCalc.js"></script>
   
     <title>
-      Ecoillumination
+      ecoIllumination
     </title>
   </head>
 
@@ -24,7 +24,7 @@
 
     <nav class="navbar-light bg-light navbar navbar-expand-sm">
     <!-- Add the <a> below: -->
-    <a class = "navbar-brand"><img src = "images/lightbulbIMG.jpg" alt = "LightbulbLogo" height="30"></a>
+    <a class = "navbar-brand"><img src = "images/ecoIlluminationLogo.jpg" alt = "LightbulbLogo" height="30"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -413,7 +413,7 @@ function windowOnClick(event) {
 </div>
 
 
-      <!-- <a id = "link" href = "index.html" style="font-size:2vw;" class="fixed-bottom text-right"> Back to Main Page </a> -->
+      <!-- <a id = "link" href = "tester.html" style="font-size:2vw;" class="fixed-bottom text-right"> Back to Main Page </a> -->
     </form>
   </div>
   </body>
