--- a/about.html
+++ b/about.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>
-      Ecoillumination
+      ecoIllumination
     </title>
   </head>
   <body>
 
     <nav class="navbar-light bg-light navbar navbar-expand-sm">
     <!-- Add the <a> below: -->
-    <a class = "navbar-brand"><img src = "images/lightbulbIMG.jpg" alt = "LightbulbLogo" height="30"></a>
+    <a class = "navbar-brand"><img src = "images/ecoIlluminationLogo.jpg" alt = "LightbulbLogo" height="30"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,8 +46,8 @@
 
 
 
-   <br><br><h3 style = "float:center;">Our Purpose:</h3>
-    <p id = "purpose" style = "float:center;"> We firmly believe in two things: <br> conserving the environment and money. <br> We achieve these by finding lightbulbs <br>for you that use the least amount of energy, <br> which not only saves you money, but saves our planet. </p> 
+   <!-- <br><br><h3 style = "float:center;">Our Purpose:</h3> -->
+    <p id = "about!" style = "float:center;"> The ecoIllumination project hopes to give homeowners the tools they need to make a difference in the fight for the environment. Energy inefficient lightbulbs are used not because anyone wants to destroy the environment, but because their impact seems so minimal, and they are the same product that has always been used. In reality, bulbs have an outsized impact: simply switching to LEDs can be the equivalent of planting hundreds of trees or taking a car off the roads for months. We hope that by giving identical replacement suggestions, we can encourage the transition to a greener future. </p> 
    
 
    </body>
