--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>
-      Ecoillumination
+      ecoIllumination
     </title>
   </head>
   <body>
 
     <nav class="navbar-light bg-light navbar navbar-expand-sm">
     <!-- Add the <a> below: -->
-    <a class = "navbar-brand"><img src = "images/lightbulbIMG.jpg" alt = "LightbulbLogo" height="30"></a>
+    <a class = "navbar-brand"><img src = "images/ecoIlluminationLogo.jpg" alt = "LightbulbLogo" height="30"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
