--- a/about.html
+++ b/about.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
   <link href="./testerStylesheet.css" rel="stylesheet">
    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-       <!-- <h1 style="font-size:3vw;" id="page_header">Lightbulb Calculator </h1> -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-     <title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <title>
       ecoIllumination
     </title>
   </head>
@@ -47,15 +46,19 @@
  
 
     <br>
-    <img src = "images/lightbulbIMG.jpg" alt = "Lightbulb" style = "float:left; width:30%; height:70%;">
-    <img src = "images/lightbulbIMG.jpg" alt = "Lightbulb" style = "float: right; width:30%; height:70%;">
 
 
-
-   <!-- <br><br><h3 style = "float:center;">Our Purpose:</h3> -->
-    <p id = "about!" style = "float:center;"> The ecoIllumination project hopes to give homeowners the tools they need to make a difference in the fight for the environment. Energy inefficient lightbulbs are used not because anyone wants to destroy the environment, but because their impact seems so minimal, and they are the same product that has always been used. In reality, bulbs have an outsized impact: simply switching to LEDs can be the equivalent of planting hundreds of trees or taking a car off the roads for months. We hope that by giving identical replacement suggestions, we can encourage the transition to a greener future. </p> 
+   <div class="row">
+      <div class="col">
+        <div class="jumbotron p-3">
+          <h1 class="text-center">More info!</h1>
+          <hr>
+          <p> The ecoIllumination project hopes to give homeowners the tools they need to make a difference in the fight for the environment. Energy inefficient lightbulbs are used not because anyone wants to destroy the environment, but because their impact seems so minimal, and they are the same product that has always been used. In reality, bulbs have an outsized impact: simply switching to LEDs can be the equivalent of planting hundreds of trees or taking a car off the roads for months. We hope that by giving identical replacement suggestions, we can encourage the transition to a greener future.
+          </p>
+        </div>
+      </div> 
+    </div> 
    
-
    </body>
 
  </html>
