--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <hr>
           <p> Our Purpose: We firmly believe in two things: conserving the environment and money. We achieve these by finding lightbulbs for you that use the least amount of energy, which not only saves you money, but saves our planet.
           </p>
-           <p>We've got a wide selection of plants, seeds, tips to transform your garden.</p> 
+          <a href="mailto:project.ecoillumination@gmail.com" target="_blank" class="btn btn-success">Email Us</a>
+
+          
         </div>
       </div> 
     </div> 
